<?xml version="1.0" encoding="utf-8"?>
<!-- 修改防盗密码界面 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#0099CC">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="4pt"
        android:paddingLeft="4pt"
        android:paddingBottom="2pt"
        android:textSize="8pt"
        android:textColor="#000000" 
        android:text="@string/old_password" />
	<EditText
		android:id="@+id/old_password"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:singleLine="true"
        android:paddingLeft="4pt"
        android:paddingRight="4pt"
		android:password="true"
		android:hint="@string/put_old_password"/>
	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="4pt"
        android:paddingLeft="4pt"
        android:paddingBottom="2pt"
        android:textSize="8pt" 
        android:textColor="#000000"
        android:text="@string/new_password" />
	<EditText
		android:id="@+id/new_password"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:singleLine="true"
		android:password="true"
		android:hint="@string/put_new_password"/>
	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="4pt"
        android:paddingLeft="4pt"
        android:paddingBottom="2pt"
        android:textSize="8pt"
        android:textColor="#000000" 
        android:text="@string/sure_new_password" />
	<EditText
		android:id="@+id/sure_password"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:singleLine="true"
		android:password="true"
		android:hint="@string/put_new_password_again"/>
	<TextView
	    android:id="@+id/textview"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
		android:text="密码长度为6-12位！"
		android:textColor="#000000"
		android:textSize="20sp"/>
	
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
	
		<Button
			android:id="@+id/sure"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/button"
			android:textSize="20sp"
			android:text="@string/sure"
			android:layout_weight="1"/>
	
		<Button
			android:id="@+id/cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/button"
			android:textSize="20sp"
			android:text="@string/cancel"
			android:layout_weight="1"/>
		
	</LinearLayout>
    

</LinearLayout>
