<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#0099CC">
	
     <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/suoding_0"
        android:padding="5pt"
        android:textSize="8pt"
        android:textColor="#FFFFFF"/>
     
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/suoding_1"
        android:padding="5pt"
        android:textSize="8pt"
        android:textColor="#FFFFFF"/>
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/suoding_2"
        android:paddingLeft="5pt"
        android:paddingBottom="5pt"
        android:textSize="8pt"
        android:textColor="#FFFFFF"/>
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/suoding_3"
        android:padding="5pt"
        android:textSize="8pt"
        android:textColor="#FFFFFF"/>
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/suoding_4"
        android:layout_marginTop="8pt"
        android:padding="5pt"
        android:textSize="8pt"
        android:textColor="#FF0000"/>
</LinearLayout>
