<?xml version="1.0" encoding="utf-8"?>
<!-- 修改安全号码界面 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#0099CC">
    

	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="4pt"
        android:paddingLeft="4pt"
        android:paddingBottom="2pt"
        android:textSize="8pt" 
        android:textColor="#000000"
        android:text="@string/new_number" />
	<EditText
		android:id="@+id/number1"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:singleLine="true"
		android:hint="@string/put_new_number"/>
	
	
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
	
		<Button
			android:id="@+id/sure1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/sure"
			android:textSize="20sp"
			android:background="@drawable/button"
			android:layout_weight="1"/>
	
		<Button
			android:id="@+id/cancel1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/cancel"
			android:textSize="20sp"
			android:background="@drawable/button"
			android:layout_weight="1"/>
		
	</LinearLayout>
    

</LinearLayout>

